// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button default 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  background: none;
  border: 2px solid #E2A480;
  border-radius: 80px;
  color: #1B1D1E;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Apercu Bold',sans-serif;
  font-size: 13px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  line-height: 1;
  outline: none;
  padding: 12px 24px;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  -webkit-transition: 400ms cubic-bezier(0.19,1,0.22,1);
  transition: 400ms cubic-bezier(0.19,1,0.22,1);
  z-index: 2;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
}

.c0:active {
  -webkit-transform: scale(0.998);
  -ms-transform: scale(0.998);
  transform: scale(0.998);
}

.c0:focus,
.c0:hover {
  -webkit-transform: scale(1.02);
  -ms-transform: scale(1.02);
  transform: scale(1.02);
}

.c0:focus:disabled,
.c0:hover:disabled,
.c0:focus[disabled],
.c0:hover[disabled] {
  cursor: default;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c0 svg {
  padding-top: 0;
  padding-right: 0;
  padding-bottom: 0;
  padding-left: 0;
  fill: transparent;
  height: 18px;
  margin-right: 6px;
  margin-bottom: 0;
  stroke: #1B1D1E;
  stroke-width: 6px;
  -webkit-transition: 400ms cubic-bezier(0.19,1,0.22,1);
  transition: 400ms cubic-bezier(0.19,1,0.22,1);
  width: 18px;
}

<button
  className="c0"
>
  Perform action
</button>
`;

exports[`Button primary 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  background: #E2A480;
  border: 2px solid #E2A480;
  border-radius: 80px;
  color: #1B1D1E;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Apercu Bold',sans-serif;
  font-size: 13px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  line-height: 1;
  outline: none;
  padding: 12px 24px;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  -webkit-transition: 400ms cubic-bezier(0.19,1,0.22,1);
  transition: 400ms cubic-bezier(0.19,1,0.22,1);
  z-index: 2;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
}

.c0:active {
  -webkit-transform: scale(0.998);
  -ms-transform: scale(0.998);
  transform: scale(0.998);
}

.c0:focus,
.c0:hover {
  -webkit-transform: scale(1.02);
  -ms-transform: scale(1.02);
  transform: scale(1.02);
}

.c0:focus:disabled,
.c0:hover:disabled,
.c0:focus[disabled],
.c0:hover[disabled] {
  cursor: default;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c0 svg {
  padding-top: 0;
  padding-right: 0;
  padding-bottom: 0;
  padding-left: 0;
  fill: transparent;
  height: 18px;
  margin-right: 6px;
  margin-bottom: 0;
  stroke: #1B1D1E;
  stroke-width: 6px;
  -webkit-transition: 400ms cubic-bezier(0.19,1,0.22,1);
  transition: 400ms cubic-bezier(0.19,1,0.22,1);
  width: 18px;
}

<button
  className="c0"
>
  Perform action
</button>
`;
